--- a/src/components/ExpenseItem.css
+++ b/src/components/ExpenseItem.css
@@ -1,7 +1,7 @@
 .expense-item {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items:center;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     padding: 0.5rem;
     margin: 1rem 0;
@@ -10,6 +10,7 @@
   }
   
   .expense-item__description {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
