--- a/src/components/ExpenseItem.css
+++ b/src/components/ExpenseItem.css
@@ -1,57 +1,67 @@
 .expense-item {
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-    padding: 0.5rem;
-    margin: 1rem 0;
-    border-radius: 12px;
-    background-color: #4b4b4b;
-  }
-  
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  /* padding: 0.5rem; */
+  /* margin: 1rem 20%;  */
+  border-radius: 12px;
+  background-color: #7b5b5b;
+  width: 60%; /* Adjust the width as needed */
+}
+
+/* .expense-item:first-child{
+    width: 10%;
+} */
+
+.expense-item__description {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  /* flex-grow: 1; */
+  /* flex-direction: column; */
+  /* gap: 1rem; */
+  /* align-items: flex-end; */
+  /* justify-content: space-between;  */
+  /* flex: 1; */
+}
+
+.expense-item h2 {
+  color: #3a3a3a;
+  font-size: 1rem;
+  /* flex: 1; */
+  /* margin: 0 1rem; */
+  color: white;
+}
+
+.expense-item__price {
+  font-size: 1rem;
+  font-weight: bold;
+  color: white;
+  background-color: #40005d;
+  border: 1px solid white;
+  padding: 0.5rem;
+  border-radius: 12px;
+}
+
+/* @media (min-width: 580px) {
   .expense-item__description {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    align-items: flex-end;
-    flex-flow: column-reverse;
+    flex-direction: row;
+    align-items: center;
     justify-content: flex-start;
     flex: 1;
   }
-  
-  .expense-item h2 {
-    color: #3a3a3a;
-    font-size: 1rem;
-    flex: 1;
-    margin: 0 1rem;
-    color: white;
+
+  .expense-item__description h2 {
+    font-size: 1.25rem;
   }
-  
+
   .expense-item__price {
-    font-size: 1rem;
-    font-weight: bold;
-    color: white;
-    background-color: #40005d;
-    border: 1px solid white;
-    padding: 0.5rem;
-    border-radius: 12px;
+    font-size: 1.25rem;
+    padding: 0.5rem 1.5rem;
   }
-  
-  @media (min-width: 580px) {
-    .expense-item__description {
-      flex-direction: row;
-      align-items: center;
-      justify-content: flex-start;
-      flex: 1;
-    }
-  
-    .expense-item__description h2 {
-      font-size: 1.25rem;
-    }
-  
-    .expense-item__price {
-      font-size: 1.25rem;
-      padding: 0.5rem 1.5rem;
-    }
-  }
+} */
