--- a/src/components/ExpenseItem.css
+++ b/src/components/ExpenseItem.css
@@ -1,40 +1,36 @@
 .expense-item {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  position: relative;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-  /* padding: 0.5rem; */
-  /* margin: 1rem 20%;  */
-  border-radius: 12px;
-  background-color: #7b5b5b;
-  width: 60%; /* Adjust the width as needed */
+  padding: 0.5rem;
+  margin: 1rem 0;
+  background-color: #4b4b4b;
 }
-
-/* .expense-item:first-child{
-    width: 10%;
-} */
 
 .expense-item__description {
   width: 90%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
-  /* flex-grow: 1; */
-  /* flex-direction: column; */
-  /* gap: 1rem; */
-  /* align-items: flex-end; */
-  /* justify-content: space-between;  */
+  margin-left: 30px;
+  /* display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: flex-end;
+    flex-flow: column-reverse;
+    justify-content: flex-start; */
   /* flex: 1; */
 }
+
+.expense-item__description span {
+    width: 30%;
+  }
 
 .expense-item h2 {
   color: #3a3a3a;
   font-size: 1rem;
-  /* flex: 1; */
-  /* margin: 0 1rem; */
+  flex: 1;
+  margin: 0 1rem;
   color: white;
 }
 
@@ -48,7 +44,7 @@
   border-radius: 12px;
 }
 
-/* @media (min-width: 580px) {
+@media (min-width: 580px) {
   .expense-item__description {
     flex-direction: row;
     align-items: center;
@@ -64,4 +60,4 @@
     font-size: 1.25rem;
     padding: 0.5rem 1.5rem;
   }
-} */
+}
